--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,15 @@
     color: black;
     font-weight: 800;
 }
+button{
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer
+}
+
 body{
     background-color: aliceblue;
     display: flex;
